--- a/NaimouzaHighSchool/Views/StudentDataReadView.xaml
+++ b/NaimouzaHighSchool/Views/StudentDataReadView.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:dvm="clr-namespace:NaimouzaHighSchool.ViewModels"
         xmlns:conv="clr-namespace:NaimouzaHighSchool.ViewModels.Converters"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         Title="Student Info" Height="576.58" Width="985.874" Closing="Window_Closing_1">
     <Window.Resources>
         <dvm:StudentDataReadViewModel x:Key="dObj"></dvm:StudentDataReadViewModel>
@@ -14,6 +15,17 @@
         <conv:Bool1Converter x:Key="Bool1Converter"></conv:Bool1Converter>
         <conv:DateConverter x:Key="DateConverter"></conv:DateConverter>
         <conv:DateConverter1 x:Key="DateConverter1"></conv:DateConverter1>
+        <Style TargetType="{x:Type DatePickerTextBox}">
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <TextBox x:Name="PART_TextBox"
+                            Text="{Binding Path=SelectedDate, StringFormat='dd-MM-yyyy', 
+                            RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}}" />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
         <Style TargetType="RadioButton">
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="Margin" Value="20,2,2,2" />
@@ -134,15 +146,15 @@
                         <StackPanel Orientation="Vertical">
                             <StackPanel Orientation="Horizontal">
                                 <Label>Search by :</Label>
-                                <RadioButton GroupName="search" Style="{StaticResource searchRadio}"
-                                    IsChecked="{Binding SearchCategory, Source={StaticResource dObj}, Converter={StaticResource SearchConverter}, ConverterParameter=name}" >
-                                    Student's Name
-                                </RadioButton>
-                                <RadioButton GroupName="search" Style="{StaticResource searchRadio}"
+                                 <RadioButton GroupName="search" Style="{StaticResource searchRadio}"
                                     IsChecked="{Binding SearchCategory, Source={StaticResource dObj}, Converter={StaticResource SearchConverter}, ConverterParameter=cls}" >
                                     Class info
-                                </RadioButton>
-                               
+                                 </RadioButton>
+                                 <RadioButton GroupName="search" Style="{StaticResource searchRadio}"
+                                    IsChecked="{Binding SearchCategory, Source={StaticResource dObj}, Converter={StaticResource SearchConverter}, ConverterParameter=name}" >
+                                    Student's Name
+                                 </RadioButton>
+                              
                                 <RadioButton GroupName="search" Style="{StaticResource searchRadio}"
                                      IsChecked="{Binding SearchCategory, Source={StaticResource dObj}, Converter={StaticResource SearchConverter}, ConverterParameter=aadhar}" >
                                      Aadhar no.
@@ -341,9 +353,11 @@
                                 
                                 <Label Grid.Row="3" Grid.Column="3" Style="{StaticResource lblProperty}">DoB</Label>
                                 <Label Grid.Row="3" Grid.Column="4" Style="{StaticResource doubleDot}">:</Label>
-                                <DatePicker Grid.Row="3" Grid.Column="5" IsHitTestVisible="{Binding HitTestGeneral, Source={StaticResource dObj}}"
+                                <!--<DatePicker Grid.Row="3" Grid.Column="5" IsHitTestVisible="{Binding HitTestGeneral, Source={StaticResource dObj}}"
                                             Text="{Binding Dob, Source={StaticResource dObj}, Mode=TwoWay, Converter={StaticResource DateConverter}}">
-                                </DatePicker>
+                                </DatePicker>-->
+                                <xctk:DateTimeUpDown Grid.Row="3" Grid.Column="5" Width="150" IsReadOnly="{Binding IsReadOnlyGen, Source={StaticResource dObj}}"
+                                                     Text="{Binding Dob, Source={StaticResource dObj}, Converter={StaticResource DateConverter1}, UpdateSourceTrigger=LostFocus}" Format="ShortDate" TextAlignment="Left" />
                                 <Label Grid.Row="4" Grid.Column="3" Style="{StaticResource lblProperty}">Age</Label>
                                 <Label Grid.Row="4" Grid.Column="4" Style="{StaticResource doubleDot}">:</Label>
                                 <Label Grid.Row="4" Grid.Column="5" Content="{Binding TxbAge, Source={StaticResource dObj}, Mode=OneWay}" Style="{StaticResource lblValue}"  Foreground="{Binding TxbAgeColor, Source={StaticResource dObj}}"></Label>
@@ -687,8 +701,10 @@
                                 <TextBox Grid.Row="1" Grid.Column="1" IsReadOnly="{Binding IsReadOnlyAdm, Source={StaticResource dObj}}"
                                          Text="{Binding AdmissionNo, Source={StaticResource dObj}, Mode=TwoWay}" Style="{StaticResource TxbInDetail}" Foreground="{Binding AdmissionNoColor, Source={StaticResource dObj}}"></TextBox>
                                 <Label Grid.Row="2" Style="{StaticResource lblProperty}">Admission Date</Label>
-                                <DatePicker Grid.Row="2" Grid.Column="1" Margin="1" Width="150" HorizontalAlignment="Left" IsHitTestVisible="{Binding HitTestAdm, Source={StaticResource dObj}}"
-                                            Text="{Binding AdmissionDate, Source={StaticResource dObj}, Converter={StaticResource DateConverter}, Mode=TwoWay}"></DatePicker>
+                                <!--<DatePicker Grid.Row="2" Grid.Column="1" Margin="1" Width="150" HorizontalAlignment="Left" IsHitTestVisible="{Binding HitTestAdm, Source={StaticResource dObj}}"
+                                            Text="{Binding AdmissionDate, Source={StaticResource dObj}, Converter={StaticResource DateConverter}, Mode=TwoWay}"></DatePicker>-->
+                                <xctk:DateTimeUpDown Grid.Row="2" Grid.Column="1" Width="150" IsReadOnly="{Binding IsReadOnlyAdm, Source={StaticResource dObj}}"
+                                                     Text="{Binding AdmissionDate, Source={StaticResource dObj}, Converter={StaticResource DateConverter1}, UpdateSourceTrigger=LostFocus}" Format="ShortDate" TextAlignment="Left" />
                                 <Label Grid.Row="3" Style="{StaticResource lblProperty}">Admitted in Class</Label>
                                 <ComboBox Grid.Row="3" Grid.Column="1" Width="80" HorizontalAlignment="Left" Margin="0,0,0,20" IsHitTestVisible="{Binding HitTestAdm, Source={StaticResource dObj}}"
                                           ItemsSource="{Binding ClassesForAdmission, Source={StaticResource dObj}}" SelectedIndex="{Binding ClassessForAdmissionIndex, Source={StaticResource dObj}}"></ComboBox>
@@ -696,8 +712,10 @@
                                 <TextBox Grid.Row="1" Grid.Column="3" IsReadOnly="{Binding IsReadOnlyAdm, Source={StaticResource dObj}}"
                                          Text="{Binding LastSchool, Source={StaticResource dObj}, Mode=TwoWay}" Style="{StaticResource TxbInDetail}" Foreground="{Binding LastSchoolColor, Source={StaticResource dObj}}"></TextBox>
                                 <Label Grid.Row="2" Grid.Column="2" Style="{StaticResource lblProperty}">Date of Leaving</Label>
-                                <DatePicker Grid.Row="2" Grid.Column="3" Width="150" HorizontalAlignment="Left" IsHitTestVisible="{Binding HitTestAdm, Source={StaticResource dObj}}"
-                                            Text="{Binding DateOfLeaving, Source={StaticResource dObj}, Converter={StaticResource DateConverter}}"></DatePicker>
+                                <!--<DatePicker Grid.Row="2" Grid.Column="3" Width="150" HorizontalAlignment="Left" IsHitTestVisible="{Binding HitTestAdm, Source={StaticResource dObj}}"
+                                            Text="{Binding DateOfLeaving, Source={StaticResource dObj}, Converter={StaticResource DateConverter}}"></DatePicker>-->
+                                <xctk:DateTimeUpDown Grid.Row="2" Grid.Column="3" Width="150" IsReadOnly="{Binding IsReadOnlyAdm, Source={StaticResource dObj}}"
+                                                     Text="{Binding DateOfLeaving, Source={StaticResource dObj}, Converter={StaticResource DateConverter1}, UpdateSourceTrigger=LostFocus}" Format="ShortDate" TextAlignment="Left" />
                                 <Label Grid.Row="3" Grid.Column="2" Style="{StaticResource lblProperty}">TC</Label>
                                 <TextBox Grid.Row="3" Grid.Column="3" IsReadOnly="{Binding IsReadOnlyAdm, Source={StaticResource dObj}}"
                                        Text="{Binding Tc, Source={StaticResource dObj}, Mode=TwoWay}" Style="{StaticResource TxbInDetail}"
